fix: gap

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ html {
   font-size: 400%;
   padding: 20px;
   margin-top: 190px;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   z-index: 1;
 }
           
